# Python-web

./: db.sqlite3  pyproject.toml  requirements.txt
djangotutorial/mysite/: settings.py  urls.py
home/: models.py  urls.py  views.py  wsgi.py
home/migrations/: 0001_initial.py
home/templates/home/: editar_produto.html  home.html
mysite/: vercel.json
mysite/polls/: views.py
mysite/polls/templates/polls/: detail.html  index.html  results.html
mysite/polls/templates/static/polls/: style.css
mysite/projeto/: settings.py  urls.py  wsgi.py
projet_cad_usuarios/: manage.py
projet_cad_usuarios/app_cad_usuarios/: models.py  views.py
projet_cad_usuarios/projet_cad_usuarios/: asgi.py  settings.py  urls.py  wsgi.py
projeto/: settings.py  urls.py
projeto/polls/: views.py
projeto/polls/templates/: details.html  index.html  results.html
projeto/projeto/: settings.py
projeto/static/css/: home.css
template/home/: home.html
templates/usuarios/: home.html
