[tool.poetry]
name = "formulario"
version = "0.1.0"
description = ""
authors = ["Marvin <escorpiano18@bol.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.1.3"


[tool.poetry.group.dev.dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
